<resources>
    <string name="app_name">Pax App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_prefrence_key">"com.example.com.MyPrefKey"</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Rs">\u20B9</string>
    <string name="amount_in">Amount (In \u20B9)</string>
    <string name="policy_title">At Federal Bank our principal concern is the responsible use of information that users and clients share and disclose to us. Federal Bank\'s commitment towards guaranteed confidentiality and privacy at all times is clearly articulated in our Privacy Policy. We will use our best efforts to ensure that the information you submit to us remains private, and is used only for the purpose for which it is submitted.</string>
    <string name="personal_info">We collect information that users provide voluntarily to us, in the form of feedback. Federal Bank does not provide any information of users to a third party without specifically informing the users at the time of collection or without the express consent of users themselves.</string>
    <string name="access_log">Federal Bank logs IP addresses, browser type, number of pages viewed etc. in order to provide better service for our users. We use the information to get page view statistics, to analyze trends and better understand the usage of the site, and for system administration purposes.</string>
    <string name="user_information">Federal Bank reserves the right to perform statistical analysis of user behaviours and preferences in order to measure user\'s relative interests in the various areas of the web site for the purpose of product and service development. The analysis is anonymous and not tagged to identifiable users. The analytical data that Federal Bank collects is for internal use only to improve the content and services of its web site. In return, users will benefit from improved quality of services.</string>
    <string name="third_party_text">Unless Federal Bank specification informs users at the time of collection, or unless users give express consent, Federal Bank does not provide any personally identifying information to a third party. However, if subpoenaed or ordered by court of law, Federal Bank will have to disclose to the proper authorities the personal information proper authorities the personal information of any individual user.</string>
    <string name="other_materials">Linked sites are not under the control of Federal Bank, and Federal Bank will not be held responsible for the content or privacy policies of any linked sites or any links containing other linked sites.</string>
    <string name="police_consent">Federal Bank will, as and when it deems fit to do so, change, alter or modify its Privacy Policy. Users are advised to visit the site continually in order to monitor changes in the policy, as the policy will be binding upon them in relation to their use of Federal Bank\'s services.</string>
    <string name="fraud_transaction"><![CDATA[Please contact Customer Care at << Customer Care Number>>?]]></string>
    <string name="text_1">These terms and conditions (\" <b>Terms and Conditions</b>\") apply to and regulate the provisions of prepaid payment instruments namely iMudra Card(s) (collectively \"Prepaid Cards\" or \"Cards\" or \"PPIs\") provided by <b>Indian Railway Catering and Tourism Corporation Limited </b>(\"the Company\"). The PPIs are issued by Federal Bank and powered by Pax.
        \n\n By completing the sign-up process for availing any of the Cards, you are deemed to have expressly read, understood and accepted each and every Terms and Conditions mentioned herein. You agree to be bound by all the Terms and Conditions mentioned herein, as may be amended from time to time.
        \n\n The Services are not intended for use by individuals under eighteen (18) years of age (or the applicable age of majority, if greater than eighteen(18) years of age). If an end-user is under eighteen (18) years of age (or the applicable age of majority, if greater than eighteen (18) years of age) and /or is unable to enter into legally binding contracts under applicable law, that end-user does not have permission to use and/or access the Site and/or Services.
        \n\n In this agreement, \"We\", \"Us\" or \"Our\" refers to the Federal Bank , or the Company/Pax acting on behalf of Federal Bank. \"You\" or \"Your\" refers to the individual purchasing or using the Prepaid Card.
    </string>
    <string name="text_a"> <b>1. DEFINITIONS</b>
        \n\n In this Terms and Conditions, unless the contrary intention appears and/or the Context otherwise requires, Capitalized terms defined by: (i) inclusion in quotations and/or parenthesis have the meaning so ascribed; and (ii) the following terms shall have the meaning assigned to them herein below
        \n\n a)\"Account\" refers to a prepaid account with an account balance equivalent to amount loaded on the PPIs, for the purpose of monitoring the limits available on such PPIs.
        \n\n b) \"Business Day\" means a day other than a Sunday, 2nd or 4th Saturday of a Month or Public Holiday as defined under Section 25 of Negotiable Instrument Act, 1881 on which bank are open to transact business of banking
        \n\n c) \"Charges\" means such levy, costs and charges levied by us usage of the PPIs, as amended from time to time
        \n\n d) \"Customer\" or \"Holder\" or \"You\" shall mean any person to whom the PPI is issued and who is authorised to hold and use the same against the value stored on such PPi
        \n\n e) \"Customer Care Centre\" refers to contact centre provided by us for addressing all queies, complaints raised by the Customer or any details or information sought by the Customer in relation to the PPIs.
        \n\n f) \"EDC\" or \"Electronic Data Capture\" Machine means terminal, printer, other peripheral and accessory and necessary software on which the PPI can be swiped or used to initiate a transaction
        \n\n g) \"Internet Payment Gateway\" means the protocol stipulated/to be stipulated by us authorising the payments made using PPI over the internet upon authentication of the Customer.
        \n\n h) \"KYC\" shall means Know Your Customer guidelines adopted by us for the purpose of identification and verification of Customer, pursuant to the Regulations issued by Reserve Bank of India, from time to time.
        \n\n i) \"Merchant Establishments\" shall means such physical establishments (including but not limited to stores, shops, restaurants, hotels, etc.) and Reloadable stores (in any type of electronic form including but not limitedto e-commerce platforms, digital marketplaces, etc.) located in India, having a specific contract with us (or a contract through a payment aggregator/ payment gateway/ card network) for accepting PPI.
        \n\n j) \"Payment Channel\" shall means various modes of transactions including but not limited to EDC/POS terminals/kiosks/Internet Payment Gateway/ Mobile based payment solutions and various other modes as intimated by us from time to time.
        \n\n k) \"Personal Identification Number (PIN)\" is a numeric password provided to the Customer by us.
        \n\n l) \"POS\" or \"Point of sale\" means electronic terminals maintained by Merchant Establishments in India at which the Customer can use the PPI.
        \n\n m) \"PPI\" shall mean a prepaid instrument which includes gift cards and meal cards that facilitates purchases against the value stored on such PPIs as defined in the Regulations.
        \n\n n) \"Regulations\" shall mean the master directions, circulars, notifications, rules, guidelines, regulations, etc. issued by Reverve Bank of India or any other competent authority related to issuance and operation of prepaid payment instruments in India, as amended from time to time.
        \n\n o) \"Schedule of Charges\" shall mean the details of fees or charges as may be prescribed by us from time to time and displayed on our.
        \n\n p) \"Transaction\" means any transaction initiated by the Customer using PPI at any Merchant Establishment.
        \n\n q) \"Federal Bank\" or \"Issuer\" shall mean The Federal Bank Ltd., a banking company within the meaning of Companies Act, 2013 having its registered office at Federal Towers, P B NO 103, Aluva, Ernakulam - 683101.
        \n\n r) \"IRCTC\" or \"the Company\" shall mean <b> Indian Railway Catering and Tourism Corporation Limited</b>, a company within the meaning of the Companies Act, 2013, having its registered office at B-148, 11th Floor, Stateman House, New Delhi - 110001.
        \n\n s) \"Pax\" shall mean Pax Technologies Pvt. Ltd., a company incorporated within the meaning of companies Act, 2013 having its registered office at M-10, Gren Park Main, New Delhi - 110016.

    </string>
</resources>